# fastapi-database

./: main.py  pyproject.toml
alembic/: env.py
alembic/versions/: c780cfb39355_add_deleted_at_user_table.py  de54835b9b9d_initial_migration.py
app/: database.py  main.py
app/api/routes/: posts.py  users.py
app/crud/: user.py
app/models/: user.py
app/repositories/: base.py  post.py  soft_delete_base.py  user.py
app/schemas/: post.py  user.py
app/utils/: filters.py  pagination.py
